--- a/Elibrary/Libery/QuanLyThuVien/Site1.Master
+++ b/Elibrary/Libery/QuanLyThuVien/Site1.Master
@@ -20,6 +20,8 @@
     <script src="bootstrap/js/popper.min.js"></script>
     <%-- bootstrap js --%>
     <script src="bootstrap/js/bootstrap.min.js"></script>
+    <%--Datatables js--%>
+    <script src="database/js/jquery.dataTables.min.js"></script>
 
     <asp:ContentPlaceHolder ID="head" runat="server">
     </asp:ContentPlaceHolder>
@@ -57,17 +59,17 @@
                         </li>
 
                         <li class="nav-item active">
-                            <asp:LinkButton class="nav-link" ID="Btn_UserLogin" runat="server">User Login</asp:LinkButton>
+                            <asp:LinkButton class="nav-link" ID="Btn_UserLogin" runat="server" OnClick="Btn_UserLogin_Click">User Login</asp:LinkButton>
                         </li>
                         <li class="nav-item active">
                             <asp:LinkButton class="nav-link" ID="Btn_SignUp" runat="server">Sign Up</asp:LinkButton>
                         </li>
                         <li class="nav-item active">
-                            <asp:LinkButton class="nav-link" ID="Btn_Logout" runat="server" Visible="False">Logout</asp:LinkButton>
-                        </li>   
+                            <asp:LinkButton class="nav-link" ID="Btn_Logout" runat="server" Visible="False" OnClick="Btn_Logout_Click">Logout</asp:LinkButton>
+                        </li>
 
                         <li class="nav-item active">
-                            <asp:LinkButton class="nav-link" ID="Btn_Hello" runat="server" Visible="False" >Hello user</asp:LinkButton>
+                            <asp:LinkButton class="nav-link" ID="Btn_Hello" runat="server" Visible="False">Hello user</asp:LinkButton>
 
                         </li>
                     </ul>
